--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -7,11 +7,17 @@
   "scripts": {
     "watch:ts": "tsc -w",
     "build": "tsc -b",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "test": "jest"
   },
   "dependencies": {
     "graphql": "^0.13.0",
     "graphql-tag": "^2.9.2",
     "winston": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.4",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4"
   }
 }
