--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -38,6 +38,7 @@
     "jest": "^23.6.0",
     "jsonwebtoken": "^8.3.0",
     "npm-run-all": "^4.1.3",
+    "source-map-support": "^0.5.9",
     "supertest": "^3.3.0"
   }
 }
