--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
     "clean": "rimraf dist",
     "lint": "tslint -c ../tslint.json -p tsconfig.json",
     "start": "node dist/index.js",
+    "test": "jest",
     "watch:ts": "tsc -w",
     "watch:start": "nodemon dist/index.js",
     "watch:debug": "nodemon --inspect dist/index.js"
